RESOLVED FIXED36534
Web Inspector: [REGRESSION] Web Inspector does not show inspected page location in window title.
https://bugs.webkit.org/show_bug.cgi?id=36534
Summary Web Inspector: [REGRESSION] Web Inspector does not show inspected page locati...
Pavel Feldman
Reported 2010-03-24 08:25:07 PDT
Empty space after the dash instead.
Attachments
patch (1.13 KB, patch)
2010-03-24 08:55 PDT, Yury Semikhatsky
no flags
Yury Semikhatsky
Comment 1 2010-03-24 08:55:45 PDT
WebKit Commit Bot
Comment 2 2010-03-25 06:46:06 PDT
Comment on attachment 51507 [details] patch Clearing flags on attachment: 51507 Committed r56538: <http://trac.webkit.org/changeset/56538>
WebKit Commit Bot
Comment 3 2010-03-25 06:46:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.