2010-03-25  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Initialize Web Inspector title with inspected page URL when opening Web Inspector.

        https://bugs.webkit.org/show_bug.cgi?id=36534

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::setFrontend):

Canonical link: https://commits.webkit.org/47832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56538 268f45cc-cd09-0410-ab3c-d52691b4dbfc